<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include
        android:id="@+id/title"
        layout="@layout/menu_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ededed" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:text="@string/reimbursebill_moeny"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/billcheck_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center|center_horizontal"
                android:background="@null"
                android:gravity="center"
                android:hint="请输入报销金额"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ededed" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:text="@string/reimbursebill_time"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/billcheck_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center|center_horizontal"
                android:text="2017-10-10"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ededed" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:text="@string/reimbursebill_type"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:background="@null"
                android:id="@+id/billcheck_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center|center_horizontal"
                android:gravity="center"
                android:hint="请输入发票类别"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ededed" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:text="@string/reimbursebill_cause"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/billcheck_cause"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_gravity="center|center_horizontal"
                android:textColor="@color/black"
                android:hint="请输入发票说明"
                android:background="@null"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ededed" />
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/billcheck_delete"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:background="@color/color_grey_eb0000"
            android:text="@string/delete"
            />
        <Button
            android:id="@+id/billcheck_save"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="match_parent"
            android:background="@color/color_grey_3D63E6"
            android:text="@string/save" />
    </LinearLayout>
</RelativeLayout>